cmake_minimum_required(VERSION 3.24)
project(C___ex)

set(CMAKE_CXX_STANDARD 17)

add_executable(C___ex main.cpp day01/FirstStep.cpp day02/scope1.cpp day02/scope2.cpp day02/constEx.cpp day02/lifetime.cpp day02/CircleArea.cpp
        day03/controlEx.cpp
        day03/structEx.cpp
        day03/classEx.cpp
        day03/arrayEx.cpp
        day03/simplePt.cpp
        day04/funcEx.cpp
        day04/convFtoC.cpp
        day04/SwapInt.cpp
        day04/Round.cpp
        day04/TimeCalc.cpp
        day05/Counter.h
        day05/CntMain.cpp
        day06/CounterM.h
        day06/mainFunc.cpp
        day06/VecF.h
        day06/NameObj.h
        day07/CharStack.h
        day07/CharStack.cpp
        day07/CSMain.cpp
        day07/Complex1.h
        day07/Complex1.cpp
        day08/operatorEx.h
        day08/Pencils.h
        day08/Pencils.cpp
        day09/homework01.cpp
        day09/homework02.cpp
        day09/homework03.cpp
        day09/homework04.cpp
        day09/homework05.cpp
        day10/VFMain3.cpp
        day10/SafeIntArray.h
        day10/MyString.h
        day11/Person1.h
        day11/Student1.h
        day11/Person2.h
        day11/student2.h
        day12/BaseClass.h
        day12/DrvClass.h
        day13/GrAttrib.h
        day13/Figure.h
        day13/Circle.h
        day13/Circle.cpp
        day13/Triangle.cpp
        day13/Triangle.h
        day13/FigMain.cpp
        day13/MIStudent.h
        day13/MIEmployee.h
        day13/MIParttime.h
        day13/MiParttime.cpp
        day13/VBPerson.h
        day13/VBStudent.h
        day13/VBEmployee.h
        day13/VBParttime.h
        day13/VBMain.cpp
        day14/Stack1.h
        day14/StackT.h
        day14/StackMain.cpp
        day14/SwapFunc.h
        day14/SortFT.h
        day15/Vector1.cpp
        day15/Vector2.cpp
        day15/Vector3.cpp
        day15/PBookMap.cpp
        day16/HMean.cpp
        day16/IntArray1.cpp
        day16/IntArray1.h
        day16/IA1Main.cpp
)
